ViewData and ViewBag

--- a/Views/Hello/Index.cshtml
+++ b/Views/Hello/Index.cshtml
@@ -5,4 +5,6 @@
 <div class="text-center">
     <h1 class="display-4">My Movie List</h1>
     <p>Hello from our View Template!</p>
+    @* <p>@ViewBag.message</p> *@
+    <p>@ViewData["Message"]</p>
 </div>
